# hyperspace

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  Rocket.toml  docker-compose.local.yml  docker-compose.production.yml  package-lock.json  package.json  playwright.config.ts  spacetime.json  spacetime.local.json
docs/plans/: 2026-02-26-hyperspace-design.md  2026-02-26-hyperspace-implementation.md  2026-02-27-drag-drop-stacking-design.md  2026-02-27-drag-drop-stacking-implementation.md  2026-03-03-websocket-broadcast-design.md  2026-03-03-websocket-broadcast-plan.md
src/: broadcast.rs  client.ts  lib.rs  main.rs  models.rs  reducers.rs  render.rs  routes.rs  utils.rs
src/module_bindings/: brick_table.ts  console_log_table.rs  console_log_type.rs  create_brick_reducer.ts  create_object_reducer.rs  cursor_table.ts  delete_brick_reducer.ts  delete_object_reducer.rs  event_table.ts  handle_mouseenter_reducer.rs  handle_pointerdown_reducer.rs  handle_pointerup_reducer.rs  html_broadcast_table.ts  index.ts  index_procedure.ts  join_reducer.rs  leave_reducer.rs  mod.rs  move_brick_reducer.ts  move_object_reducer.rs  scene_object_table.rs  scene_object_type.rs  set_color_reducer.rs  set_color_reducer.ts  set_name_reducer.rs  types.ts  update_cursor_reducer.rs  update_cursor_reducer.ts  user_cursor_table.rs  user_cursor_type.rs  user_info_table.rs  user_info_type.rs  user_table.ts
static/css/: input.css  isometric.css  output.css
static/js/: htmx-spacetimedb.js  scene.js
templates/: index.html.j2
tests/e2e/: cursor-test.spec.ts  (+3 more)
(+2 files in other folders)
