[package]
name = "hyperspace"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# SpacetimeDB module (Wasm only)
[target.'cfg(target_arch = "wasm32")'.dependencies]
spacetimedb = "2.0"
log = "0.4"

# Rocket server (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_ws = "0.1"
rocket_dyn_templates = { version = "0.2", features = ["minijinja"] }
spacetimedb-sdk = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = "2"
