[package]
name = "hyperspace"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# SpacetimeDB module (Wasm only)
[target.'cfg(target_arch = "wasm32")'.dependencies]
spacetimedb = { path = "../SpacetimeDB/crates/bindings" }
log = "0.4"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
